added content for 1.53.0 release